--- a/nextflow.config
+++ b/nextflow.config
@@ -65,6 +65,7 @@ params {
     variant_caller             = null
     consensus_caller           = 'bcftools'
     min_mapped_reads           = 1000
+    min_allele_frequency       = 0.25  // Default value, can be overridden by command line
     ivar_trim_noprimer         = false
     ivar_trim_offset           = null
     filter_duplicates          = false
@@ -101,7 +102,7 @@ params {
     version                    = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'genomes'
+    schema_ignore_params       = 'genomes,min_allele_frequency'
 
 
     // Config options
