Add APOBEC3 process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -36,6 +36,14 @@ process {
             pattern: '*_versions.yml'
         ]
     }
+
+    withName: APOBEC3_ANALYSIS_IVAR {
+        publishDir = [
+            path: { "${params.outdir}/variants/ivar/apobec3" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
 }
 
 if (params.platform == 'nanopore') {
