--- a/nextflow.config
+++ b/nextflow.config
@@ -66,6 +66,8 @@ params {
     consensus_caller           = 'bcftools'
     min_mapped_reads           = 1000
     min_allele_frequency       = 0.25  // Default value, can be overridden by command line
+    min_alt_dp                 = 5     // Minimum number of reads supporting alternative allele
+    filter_indels              = true  // Whether to remove indels from iVar variant calls
     ivar_trim_noprimer         = false
     ivar_trim_offset           = null
     filter_duplicates          = false
