--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
     primer_left_suffix         = '_LEFT'
     primer_right_suffix        = '_RIGHT'
     save_reference             = false
+    mask                       = null
 
     // Nanopore options
     fastq_dir                  = null
@@ -104,7 +105,7 @@ params {
     version                    = false
     validate_params            = true
     show_hidden_params         = false
-    schema_ignore_params       = 'genomes,min_allele_frequency'
+    schema_ignore_params       = 'genomes,min_allele_frequency,mask'
 
 
     // Config options
